# openrouter-insights

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ai_provider_tracker.json  openrouter_insights.json  pyproject.toml  test_lib.py
.github/workflows/: daily_sync.yml  pricing_sync.yml  publish_pypi.yml  tests.yml
ai_provider_tracker/: __init__.py
ai_provider_tracker/adapters/api/: main.py
ai_provider_tracker/adapters/gateways/: artificial_analysis_fetcher.py  openrouter_fetcher.py
ai_provider_tracker/adapters/persistence/: json_exporter.py  json_repository.py  sqlite_repository.py
ai_provider_tracker/cost_tracking/: __init__.py  calculator.py  models.py  normalizers.py  pricing.py  repository.py  tracker.py  utils.py
ai_provider_tracker/data/: __init__.py  pricing_catalog.json
ai_provider_tracker/domain/: entities.py  interfaces.py
ai_provider_tracker/domain/services/: matching_engine.py
ai_provider_tracker/infrastructure/: config.py
ai_provider_tracker/use_cases/: sync_registry.py
docs/: 00-overview.md  01-architecture.md  02-data-schema.md  03-matching-engine.md  04-api-service.md  05-classification-logic.md  AI_CONTEXT.md
llmindex/: __init__.py
openrouter_insights/: __init__.py
openrouter_insights/adapters/api/: main.py
openrouter_insights/adapters/gateways/: artificial_analysis_fetcher.py  http_fetcher.py  openrouter_fetcher.py
openrouter_insights/adapters/persistence/: json_exporter.py  json_repository.py  models.py  sqlite_repository.py
openrouter_insights/domain/: entities.py  interfaces.py
openrouter_insights/infrastructure/: config.py
openrouter_insights/use_cases/: sync_registry.py
scripts/: __init__.py  debug_fetch.py  generate_registry.py  sync_pricing_catalog.py
tests/: test_domain.py  test_facade.py  test_persistence.py
tests/integration/: test_fetchers.py  test_sqlite_full.py
tests/unit/: test_dx_upgrades.py  test_edge_cases.py  test_entities.py  test_facades_full.py  test_http_fetcher.py  test_matching_engine.py  test_sync_use_case.py  test_test_exporter.py
tests/unit/cost_tracking/: test_cost_tracking.py  test_sync_pricing_catalog.py
