[tool.poetry]
name = "llmindex"
version = "0.1.0"
description = "A unified, open-source LLM registry merging OpenRouter and ArtificialAnalysis."
authors = ["Antigravity Agent <agent@gemini.ai>"]
readme = "README.md"
packages = [{include = "llmindex"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.16"
aiosqlite = "^0.19.0"
aiohttp = "^3.9.3"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
rapidfuzz = "^3.14.3"
fastapi = { version = "^0.110.0", optional = true }
uvicorn = { version = "^0.27.1", optional = true }

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]

[tool.poetry.scripts]
llmindex = "llmindex.adapters.api.main:run_server"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "llmindex/__init__.py:__version__" # Use __version__ in init
version_toml = ["pyproject.toml:tool.poetry.version"]
major_on_zero = false
branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
commit_subject = "chore: release v{version}"
commit_message = "chore: automated release version {version}"
commit_author = "github-actions-bot <actions@github.com>"
