[tool.poetry]
name = "openrouter-insights"
version = "0.2.1"
description = "Professional, unified, and enhanced index for LLM models based on OpenRouter with ArtificialAnalysis intelligence."
authors = ["OpenRouter Insights Maintainers <maintainers@llmindex.ai>"]
readme = "README.md"
homepage = "https://github.com/luisfarfan/llmindex"
repository = "https://github.com/luisfarfan/llmindex"
documentation = "https://github.com/luisfarfan/llmindex#readme"
packages = [{include = "openrouter_insights"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.16"
aiohttp = "^3.9.3"
rapidfuzz = "^3.6.2"
fastapi = {version = "^0.110.0", optional = true}
uvicorn = {version = "^0.29.0", optional = true}

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]

[tool.poetry.scripts]
openrouter_insights = "openrouter_insights.adapters.api.main:run_server"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
python-semantic-release = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "openrouter_insights/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
build_command = "pip install poetry && poetry build"
major_on_zero = false
upload_to_PyPI = true
repository = "pypi"
ad_to_release = true
commit_subject = "chore: release v{version}"
commit_message = "chore: automated release version {version}"
commit_author = "github-actions-bot <actions@github.com>"
