[tool.poetry]
name = "ai-provider-tracker"
version = "0.7.5"
description = "Unified usage and cost tracking for AI providers such as FAL.AI and OpenRouter."
authors = ["Luis Eduardo Farfan Melgar <lucho.farfan9@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/luisfarfan/ai-provider-tracker"
repository = "https://github.com/luisfarfan/ai-provider-tracker"
documentation = "https://github.com/luisfarfan/ai-provider-tracker#readme"
packages = [{include = "ai_provider_tracker"}, {include = "openrouter_insights"}]
include = ["ai_provider_tracker/data/pricing_catalog.json"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.16"
aiohttp = "^3.9.3"
rapidfuzz = "^3.6.2"
fastapi = {version = "^0.110.0", optional = true}
uvicorn = {version = "^0.29.0", optional = true}

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]

[tool.poetry.scripts]
ai-provider-tracker = "ai_provider_tracker.adapters.api.main:run_server"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
python-semantic-release = "^9.0.0"
pytest-cov = "^7.1.0"
aioresponses = "^0.7.8"


[tool.semantic_release]
version_variable = [
    "ai_provider_tracker/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
build_command = "pip install poetry && poetry build"
major_on_zero = false
upload_to_PyPI = true
repository = "pypi"
ad_to_release = true
commit_subject = "chore: release v{version}"
commit_message = "chore: automated release version {version}"
commit_author = "github-actions-bot <actions@github.com>"






[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

